# tests/snapshots/openapi.json
@@ -1653,6 +1653,45 @@
       }
     },
     "/api/v1/tasks/{task_id}": {
+      "delete": {
+        "description": "Soft-delete задачи и её поддерева.",
+        "operationId": "api_delete_task_api_v1_tasks__task_id__delete",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "task_id",
+            "required": true,
+            "schema": {
+              "title": "Task Id",
+              "type": "integer"
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "Successful Response"
+          },
+          "422": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPValidationError"
+                }
+              }
+            },
+            "description": "Validation Error"
+          }
+        },
+        "security": [
+          {
+            "OAuth2PasswordBearer": []
+          }
+        ],
+        "summary": "Api Delete Task",
+        "tags": [
+          "tasks"
+        ]
+      },
       "get": {
         "operationId": "api_get_task_api_v1_tasks__task_id__get",
         "parameters": [
